--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <body>
-    <h1>Poem></h1>
+    <h1>Poem</h1>
     <h3>by Mahel NN</h3>
     <p>rainbow. <strong>rainbow</strong>. you are my rainbow.</p>
   </body>
